<resources>
    <string name="app_name">My Video List</string>
    <string name="recommend_video">Video Recommend</string>
    <string name="category_list">Category List</string>
    <string name="video_list">Video List</string>
    <string name="recommend_log">Recommended Log</string>
    <string name="add_category">+ Add category</string>
    <string name="delete">Delete</string>
    <string name="add_video">+ Add video</string>
    <string name="search_count">SearchCount:</string>
    <string name="have_seen">Seen</string>
    <string name="not_have_seen">Not seen</string>
    <string name="modify">Modify</string>
    <string name="recommend">Recommend</string>
    <string name="init_log">Init log</string>
    <string name="init">Init</string>
    <string name="question_init">Reset data?</string>
    <string name="loading">Loading...</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="disconnect">Disconnect</string>
    <string name="sign_out">Sign Out</string>
    <string name="init_data">Init data</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="backup">Backup</string>
    <string name="question_backup">Are you sure you want to back up your data to the cloud?</string>
    <string name="restore">Restore</string>
    <string name="question_restore">Are you sure you want to restore your cloud data?</string>
    <string name="authorizing">Authorizing...</string>
    <string name="all">ALL</string>
    <string name="mix">MIX</string>
    <string name="sequence">SEQUENCE</string>
    <string name="random">RANDOM</string>
    <string name="complete_file_save">File saved successfully</string>
    <string name="category_saved_to_cloud">Category saved to cloud</string>
    <string name="video_saved_to_cloud">Video saved to cloud</string>
    <string name="log_saved_to_cloud">Log saved to cloud</string>
    <string name="start_backup">Start backup</string>
    <string name="backup_complete">Backup complete</string>
    <string name="backup_failed">Backup failed</string>
    <string name="completed_category_cloud_file_restoration">Completed category cloud file restoration</string>
    <string name="completed_video_cloud_file_restoration">Completed video cloud file restoration</string>
    <string name="completed_log_cloud_file_restoration">Completed log cloud file restoration</string>
    <string name="start_restore">Start restore</string>
    <string name="restoration_complete">Restoration complete</string>
    <string name="failed_category_registration">Failed category registration</string>
    <string name="google_play_services_error">Google Play Services error.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="please_select_category">Please select category</string>
    <string name="please_input_video_name">Please input video name</string>
    <string name="video_added">Video added</string>
    <string name="name_of_video_to_search_or_add">Name of video to search or add</string>
    <string name="add_log">Add Log</string>
    <string name="question_add_log">Do you want to add logs to recommend?</string>
    <string name="add_log_success">Log added successfully</string>
    <string name="add_log_fail">Failed to add log</string>
    <string name="detail_view">View detail</string>
    <string name="no_data_to_restore">No data to restore.</string>
    <string name="hint_input_series">Enter series name</string>
    <string name="revert">Revert</string>
    <string name="naver_search">Naver Search</string>
    <string name="please_input_query">Please enter a keyword.</string>
    <string name="pubdate">Production year</string>
    <string name="user_rating">Rating</string>
    <string name="director">Director</string>
    <string name="actor">Actor</string>
</resources>
