<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="kr.co.ramza.moviemanager.ui.activities.MovieDetailActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/modifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify"/>
        <Button
            android:id="@+id/revertBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/revert"/>
        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
    </LinearLayout>
    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <kr.co.ramza.moviemanager.ui.view.ClearEditText
        android:id="@+id/movieNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />
    <kr.co.ramza.moviemanager.ui.view.ClearEditText
        android:id="@+id/seriesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />
    <CheckBox
        android:id="@+id/haveSeenCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_seen"
        android:layout_marginTop="10dp"/>
    <RatingBar
        android:id="@+id/starNumRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />
</LinearLayout>
